# agent-runtime-control-tower

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CASE_STUDY.md  LINKEDIN_POST.md
output/playwright/: health-proof.html  ops-proof.html  product-proof.html
src/agent_runtime_control_tower/: __init__.py  config.py  dashboard.html  main.py  models.py  repository.py  schemas.py  seed_data.py  services.py  state.py
tests/: test_api.py  test_service.py
